Refactoring TerminalMonitor for correct column management; currently not working.